# colorful_drawing

./: CMakeLists.txt  main.cpp
